# humanize-chinese

./: .gitignore  README.md  SKILL.md  demo.py  eval_mask_strategy.py  humanize-chinese-logic-and-defects.md  main.py  paragraph_humanize.py  pyproject.toml  refactoring-plan.md  test_ollama.py  test_paper.py
claude-code/: README.md  academic.md  detect.md  humanize.md  style.md
evals/: compression_oracle.py  run_longform_benchmark.py
output/: adversarial_results.json  eval_results.json
scripts/: academic_cn.py  bert_detector.py  compare_cn.py  config_loader.py  detect_cn.py  download_bert.py  eval_adversarial.py  eval_ensemble.py  export_all_bert.py  export_onnx.py  generate_ai_corpus.py  humanize_cn.py  lr_coef_cn.json  ngram_model.py  patterns_cn.json  prepare_training_data.py  protected_terms.json  restructure_cn.py  semantic_guard.py  style_cn.py  train_bert_detector.py  train_xgb_scorer.py
scripts/bert_model/: config.json  eval_results.json  training_meta.json
scripts/bert_model/checkpoint-10/: trainer_state.json
scripts/bert_model/checkpoint-15/: trainer_state.json
scripts/bert_model_anx/: test_onnx_model.py  tokenizer_config.json
scripts/training_data/: ai_generated_qwen_qwen3.6-plus_20260430_134116.jsonl  ai_generated_qwen_qwen3.6-plus_20260430_134708.jsonl  ai_generated_v1.jsonl
src/humanize_cn/: __init__.py  config.py
src/humanize_cn/check_pkg/: __init__.py  academic.py  api.py  detect.py
src/humanize_cn/data/: config.json
src/humanize_cn/data/models/ensemble/: xgb_model_cn.json  xgb_model_cn_meta.json
src/humanize_cn/detection/: __init__.py  academic.py
src/humanize_cn/interfaces/: __init__.py  cli.py
src/humanize_cn/models/: __init__.py  bert_detector.py  ensemble_scorer.py  ngram.py  perturbation.py  restructure.py  semantic_guard.py  token_ppl.py
src/humanize_cn/rewrite/: __init__.py  humanize.py  llm_rewrite.py  paragraph.py  targeted.py
src/humanize_cn/rewriting/: __init__.py  humanize.py  paragraph.py  style.py
