[project]
name = "humanize-cn"
version = "0.1.0"
description = "中文 AI 文本去痕迹工具 — 免费、本地运行、零 LLM 依赖"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT Non-Commercial"}

dependencies = [
    "jieba>=0.42.1",
]

[project.optional-dependencies]
bert = [
    "onnxruntime>=1.16.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
]
train = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
dev = [
    "humanize-cn[bert,train]",
]

[project.scripts]
humanize = "humanize_cn.interfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanize_cn"]
include = ["src/humanize_cn/data/*.json"]

[tool.hatch.build.targets.sdist]
include = ["src/humanize_cn", "scripts"]
