[project]
name = "humanize-cn"
version = "0.1.0"
description = "中文 AI 文本去痕迹工具 — 免费、本地运行、可选 LLM 增强"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT Non-Commercial"}

dependencies = [
    "jieba>=0.42.1",
    "loguru>=0.7.0",
    "numpy>=1.24.0,<2",
    "openai>=1.40.0",
    "requests>=2.28.0",
    "scikit-learn>=1.3.0",
    "onnxruntime>=1.20.0",
    "transformers>=4.40.0,<4.50",
    "xgboost>=2.0.0",
    "httpx>=0.24.0",
    "pandas>=2.0.0",
    "onnx>=1.14.0",
]

[project.scripts]
humanize = "humanize_cn.interfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanize_cn"]
include = ["src/humanize_cn/data/*.json"]

[tool.hatch.build.targets.sdist]
include = ["src/humanize_cn", "scripts"]
